--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,10 +29,50 @@ body {
     var(--c1) 36% 45%, var(--c2) 46% 55%, var(--c1) 56% 65%, var(--c2) 66% 75%,
     var(--c1) 76% 85%, var(--c2) 86% 95%, #0000 96%;
   background:
-    radial-gradient(50% 50% at 100% 0, var(--_g)),
-    radial-gradient(50% 50% at 0 100%, var(--_g)),
-    radial-gradient(50% 50%, var(--_g)),
-    radial-gradient(50% 50%, var(--_g)) calc(var(--s) / 2) calc(var(--s) / 2)
-      var(--c1);
+    radial-gradient(closest-side at 50% 50%, var(--_g)),
+    radial-gradient(closest-side at 50% 50%, var(--_g)),
+    radial-gradient(closest-side at 50% 50%, var(--_g)),
+    radial-gradient(closest-side at 50% 50%, var(--_g)) calc(var(--s) / 2)
+      calc(var(--s) / 2) var(--c1);
   background-size: var(--s) var(--s);
+}
+
+.grow-enter {
+  transform: scale(0);
+}
+
+.grow-enter-active {
+  transform: scale(1);
+  transition: transform 700ms ease-in-out;
+}
+
+.grow-exit {
+  transform: scale(1);
+}
+
+.grow-exit-active {
+  transform: scale(0);
+  transition: transform 700ms ease-in-out;
+}
+
+/* Initial state when entering */
+.shrink-grow-button-enter {
+  transform: scale(0);
+}
+
+/* Active state during enter transition */
+.shrink-grow-button-enter-active {
+  transform: scale(1);
+  transition: transform 700ms ease-in-out;
+}
+
+/* Initial state when exiting */
+.shrink-grow-button-exit {
+  transform: scale(1);
+}
+
+/* Active state during exit transition */
+.shrink-grow-button-exit-active {
+  transform: scale(0);
+  transition: transform 700ms ease-in-out;
 }
